# rust-cli-template

./: Cargo.toml  README.md  cargo-generate.toml
config/: base.toml
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  router.rs  state.rs  telemetry.rs  utils.rs
src/cli/: serve.rs
src/config/: http_server.rs
src/router/: ping.rs
