[package]
# name = "{{project-name}}"
# version = "0.1.0"
# edition = "2021"
# description = "{{project-description}}"
# repository = "https://github.com/{{gh-username}}/{{project-name}}"
# license = "MIT"
name = "rust-cli-template"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-robin = { git = "https://github.com/quangkeu95/rusty-robin", branch = "main" }
clap = { version = "4.1.4", features = ["cargo"] }
dotenvy = "0.15.6"
config = "0.13.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
anyhow = "1.0.61"
tokio = { version = "1.25.0", features = ["full"] }
tokio-graceful-shutdown = "0.12.1"
once_cell = "1.17.1"
thiserror = "1.0.38"
serde = "1.0.152"
derive_builder = "0.12.0"